== Revision history of libcerf, maintained by Joachim Wuttke ==

libcerf-1.12
  - Require CMake 3.6, outcomment code that requires 3.13.
  - Relative paths in CMake sources, for use as subproject.

libcerf-1.11, released 28dec18:
  - Cover voigt by test_voigt.
  - Implement new function voigt_hwhm.
  - Restore libcerf.pc.
  - Add INSTALL instructions, and other minor adjustments for use of libcerf in C++ projects.
  - Support 'ctest', which runs the numeric accuracy tests from test1.c.
  - Rename type cmplx into _cerf_cmplx to avoid name clash with Gnuplot pre 5.3.

libcerf-1.8 [2oct18], libcerf-1.9 [16oct18] and libcerf-1.10 [20dec18]
  MUST NOT BE USED
  - A bug introduced in v1.8 had broken the normalization of the Voigt function.
  - The git history leading to v1.10 has been rewritten, starting anew from v1.7

libcerf-1.7, released 26sep18:
  - Option -DCERF_CPP allows to choose C++ compilation, which is useful
    because MS VisualStudio supports C++14, but not yet C99, and in
    particular does not support complex.h under C.

libcerf-1.6, released 20sep18:
  - Migrated from automake to CMake.
  - Corrected typos in man pages.

libcerf-1.5, released 12oct16:
  - Removed unused inline function (detected by clang-1.3., reported by Luke Benes)

libcerf-1.4, released 27aug14:
  - HTML version of man pages no longer installs to man/html.
  - More concise man pages.
  - Delete a few unused include's.
  - Autotools script corrected (suggestions by Christoph Junghans).

libcerf-1.3, released 17jul13:
  - Now supporting pkg-config (suggested by Mojca Miklavec).

libcerf-1.2, released 16jul13:
  - Test programs no longer install to $bindir (reported by Mojca Miklavec).

libcerf-1.1, released 12may13:
  - Added Fortran binding by Antonio Cervellino.

libcerf-1.0, released 31jan13 by Joachim Wuttke:
  - Based on http://ab-initio.mit.edu/Faddeeva as of 28jan13.
  - Verified accuracy using double-exponential transform.
  - Simplified function names;